--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 db.sqlite3
 media
+
+
+[http]
+    postbuffer = 5m
+    
+[core]
+  packedGitLimit = 128m
+  packedGitWindowSize = 128m
+
+[pack]
+  deltaCacheSize = 128m
+  packSizeLimit = 128m
+  windowMemory = 128m
